implementing invoicing, trying to include the quantity option, error while sending the payload